layout bugs

--- a/src/styles/navigation.less
+++ b/src/styles/navigation.less
@@ -136,7 +136,7 @@ a.navbar-brand {
   }
 }
 
-div.main {
+div#main {
   .make-sm-column(8);
   .make-md-column(9);
 }
